auto setting jvm options based on the farm core request.